fix: Experience scroller on mobile overflows

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ body {
     grid-template-columns: 0px auto 0px;
   }
   .grid-container, .content-container, .content {
-    max-width: 390px;
+    max-width: 350px;
     margin: auto;
   }
   .plus-container {
@@ -196,7 +196,7 @@ p, a, li {
 
 @media only screen and (max-width: 700px) {
   .title {
-    font-size: 48px;
+    font-size: 40px;
   }
   p, li, a {
     font-size: 16px;
